feature: GetComponentByID
