# backend/docs/swagger.yaml
@@ -60,6 +60,34 @@ paths:
       summary: 全栄養素取得 API
       tags:
       - Component
+  /components/{componentId}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 栄養素 ID
+        in: path
+        name: componentId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.GetComponentsResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      summary: 栄養素取得 API
+      tags:
+      - Component
   /ingredients:
     get:
       consumes:
